gccida/g2/replace_regs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/replace_regs/src/rtlanal.c:2986:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v15.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/replace_regs/src/rtlanal.c:3063:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/replace_regs/src/rtlanal.c:3073:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/replace_regs/src/rtlanal.c:3075:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( v9.rtwint + 2), 
  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/replace_regs/src/obj/rtlanal.o] Error 1
